--- a/examples/bootstrap/package.json
+++ b/examples/bootstrap/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": " ",
   "dependencies": {
-      "bootstrap": "^3.3.7"
+      "bootstrap": "^3.3.7",
+      "jquery": "^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
